--- a/.github/workflows/baseGreetings.yml
+++ b/.github/workflows/baseGreetings.yml
@@ -1,47 +1,38 @@
-name: Basic Gitworkflow
-# Trigger the action/event. Below is for manual run
+name: Manual Trigger Workflow
+
 on:
   workflow_dispatch:
     inputs:
-      name:
-        #descrptive name to show on UI
-        description: "Guest to greet"
-        default: "Hello"
-        # Required to run
+      logLevel:
+        description: 'Log level'
         required: true
-        # input type (string, choice, boolean)
-        type: string
-      city:
-        description: "City to shown"
-        required: true
-        default: "Choose City"
+        default: 'warning'
         type: choice
         options:
-          - New Jersey
-          - Georgia
-          - Washington DC
-      color:
-        description: "Favorite color is blue"
+        - info
+        - warning
+        - debug
+      environment:
+        description: 'Environment to deploy to'
         required: true
-        type: boolean
-        
-jobs:
-      # job name to be displayed in runtime
-      Greeting_job:
-        #display name
-        name: "Greeting, Program"
+        default: 'staging'
+        type: string
 
-        # runner agent to run the job
-        runs-on:
-          - ubuntu-latest
-        steps:
-          - name: checkout code
-            uses: action/checkout@v4
-           #runs command using runner shell
-          - name: send greetings
-            run: |
-                echo "Hello ${{github.event.input.name}}
-                echo "Hello ${{github.event.inputs.city}}
-                echo "Hello ${{github.event.input.color}}
-              
-   
+jobs:
+  build_and_deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Log input values
+        run: |
+          echo "Log Level: ${{ github.event.inputs.logLevel }}"
+          echo "Environment: ${{ github.event.inputs.environment }}"
+
+      - name: Run a script based on environment
+        if: github.event.inputs.environment == 'production'
+        run: echo "Deploying to production!"
+      - name: Run a different script for staging
+        if: github.event.inputs.environment == 'staging'
+        run: echo "Deploying to staging!"
