--- a/.github/workflows/basic-workflow.yml
+++ b/.github/workflows/basic-workflow.yml
@@ -5,8 +5,8 @@ on:
     inputs:
       name:
         #descrptive name to show on UI
-        description: "Guest to greet"
-        default: "Hello"
+        description: "Please enter name"
+        #default: "Hello"
         # Required to run
         required: true
         # input type (string, choice, boolean)
@@ -32,11 +32,10 @@ jobs:
         name: "Greeting, Program"
 
         # runner agent to run the job
-        runs-on:
-          - ubuntu-latest
+        runs-on: ubuntu-latest
         steps:
           - name: checkout code
-            uses: action/checkout@v4
+            uses: actions/checkout@v4
            #runs command using runner shell
           - name: send greetings
             run: |
