--- a/.github/workflows/chain-jobs.yml
+++ b/.github/workflows/chain-jobs.yml
@@ -5,15 +5,15 @@ name: Run-Chain-Jobs
 on: 
   workflow_dispatch:
     inputs:
-      #run-job-3:
-      name:
+      run-job-3:
+      #name:
         description: "Run Multiple Jobs"
         required: true
         type: boolean
 jobs:
     job-1:
-      name: "Job 1"
-      runs-on: ubuntun-latest
+      name: Job 1
+      runs-on: ubuntu-latest
       steps:
         - name: Output for Job 1
           run: echo "Hello from Job 1. Run Job name is displayed here ${{ github.event.inputs.run-job-3 }}"
