--- a/.github/workflows/chain-jobs.yml
+++ b/.github/workflows/chain-jobs.yml
@@ -5,8 +5,8 @@ name: Run-Chain-Jobs
 on: 
   workflow_dispatch:
     inputs:
-      #run-job-3:
-      name:
+      run-job-3:
+      #name:
         description: "Run Multiple Jobs"
         required: true
         type: boolean
@@ -16,7 +16,7 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - name: Output for Job 1
-          run: echo "Hello from Job 1. Run Job name is displayed here ${{ github.event.inputs.name }}"
+          run: echo "Hello from Job 1. Run Job name is displayed here ${{ github.event.inputs.run-job-3 }}"
           
         
       
