--- a/.github/workflows/chain-jobs.yml
+++ b/.github/workflows/chain-jobs.yml
@@ -11,12 +11,23 @@ on:
         type: boolean
 jobs:
     job-1:
-      name: "Job 1"
-      runs-on: ubuntun-latest
+      name: Job 1
+      runs-on: ubuntu-latest
       steps:
         - name: Output for Job 1
-          run: echo "Hello from Job 1. Run Job name is displayed here" $ {{github.event.inputs.run-job-3}}
-          
+          run: echo "Hello from Job 1. Run Job name is displayed here ${{ github.event.inputs.run-job-3 }}"
+
+    job-2:
+      name: job 2
+      runs-on: unbuntu-latest
+      #condition to trigger - dependency
+      needs:
+        - job-1
+      steps:
+        - name: Output for job 2
+          run: echo "This is Job 2 running post JOB 1"
+
+                   
         
       
     
