--- a/.github/workflows/chain-jobs.yml
+++ b/.github/workflows/chain-jobs.yml
@@ -12,14 +12,14 @@ on:
         type: boolean
 jobs:
     job-1:
-      name: Job 1
+      name: Job number 1
       runs-on: ubuntu-latest
       steps:
         - name: Output for Job 1
           run: echo "Hello from Job 1. Run Job name is displayed here ${{ github.event.inputs.run-job-3 }}"
 
     job-2:
-      name: job 2
+      name: Job number 2
       runs-on: ubuntu-latest
       #condition to trigger - dependency
       needs:
