--- a/.github/workflows/chain-jobs.yml
+++ b/.github/workflows/chain-jobs.yml
@@ -30,7 +30,7 @@ jobs:
     job-3:
       name: Job number 3
       # CONDITIONAL STATE
-      if: github.event.input.run-job-3 =='true'
+      if: github.event.inputs.run-job-3 =='true'
       runs-on: ubuntu-latest
       needs:
       - job-1
