--- a/.github/workflows/variable.yml
+++ b/.github/workflows/variable.yml
@@ -1,10 +1,9 @@
-
 #name of file
 name: Variable and Context
 
 on:
 # event_trigger
-  workflow_dispatch
+  workflow_dispatch:
     inputs:
       description: "Retrieving Github context and variable"
       required: true
