--- a/.github/workflows/variable.yml
+++ b/.github/workflows/variable.yml
@@ -19,4 +19,7 @@ jobs:
     - name: Github variable details
       env:
         GITHUB_CONTEXT: ${{ toJSON(github) }}
-      run:  echo  $GITHUB_CONTEXT
+      run:  |
+        echo  "printing github context"
+        echo ${{ env.GITHUB_CONTEXT }}
+        
