--- a/.github/workflows/variable.yml
+++ b/.github/workflows/variable.yml
@@ -21,5 +21,5 @@ jobs:
         GITHUB_CONTEXT: ${{ toJSON(github) }}
       run:  |
         echo  "printing github context"
-        echo ${{ env }}
+        echo ${{ GITHUB_CONTEXT}}
         
