--- a/.github/workflows/variable.yml
+++ b/.github/workflows/variable.yml
@@ -9,6 +9,10 @@ on:
         description: Retrieving Github context and variable
         required: true
         type: string
+env:
+  VAR1: myvariable1
+  VAR2: myvariable2
+  VAR3: myvarlabel3
 
 # job to execute
 jobs: 
@@ -22,4 +26,27 @@ jobs:
       run:  |
         echo  "printing github context"
         echo "$GITHUB_CONTEXT"
-        
+  job-2:
+    runs-on: ubuntu-latest
+    
+      
+    steps:
+    -  name: steps 1 # run name
+       id: step1  # to be referenced
+       run: echo "step1value=Hello" >> $GITHUB_OUTPUT
+       
+       name: Step 1b
+       id: step1b
+       run: echo "step2value=World"  >> $GITHUB_OUTPUT
+    
+    outputs:
+      output1: ${{ steps.step1.outputs.step1value }}
+      output2: ${{ steps.step1b.output.step2value }}
+  
+  job-3:
+    runs-on: ubuntu-latest
+    needs: job-2
+    steps:
+    -  name: Job number 3
+       run: echo ${{ needs.job-2.outputs.output1 }} ${{ needs.job-2.outputs.output2 }}
+       
