--- a/.github/workflows/variable.yml
+++ b/.github/workflows/variable.yml
@@ -35,7 +35,7 @@ jobs:
        id: step1  # to be referenced
        run: echo "step1value=Hello" >> $GITHUB_OUTPUT
        
-       name: Step 1b
+    -  name: Step 1b
        id: step1b
        run: echo "step2value=World"  >> $GITHUB_OUTPUT
     
