--- a/.github/workflows/variable.yml
+++ b/.github/workflows/variable.yml
@@ -57,9 +57,8 @@ jobs:
       VAR2: job-4var2
     needs: job-3
     steps:
-    - name: Job number 4
-      run: | 
-
+    -  name: Job number 4
+    -  run: | 
         echo $VAR1 # print VAR1 varible at worflow level
         echo ${{ env.VAR1 }} # print VAR1 variable at job level
 
