--- a/.github/workflows/variable.yml
+++ b/.github/workflows/variable.yml
@@ -52,15 +52,10 @@ jobs:
 
   job-4:
     runs-on: ubuntu-latest
-    env:
-      VAR1: job-4var1 # overriding variable declared at worflow level
-      VAR2: job-4var2
-    needs: job-3
     steps:
-    -  name: Job number 4
-    -  run: | 
-        echo $VAR1 # print VAR1 varible at worflow level
-        echo ${{ env.VAR1 }} # print VAR1 variable at job level
+         run: |
+          echo $VAR1 # print VAR1 varible at worflow level
+          echo ${{ env.VAR1 }} # print VAR1 variable at job level
 
 
 
