--- a/.github/workflows/basic-workflow.yml
+++ b/.github/workflows/basic-workflow.yml
@@ -1,6 +1,5 @@
 name: Basic Gitworkflow
-run-name: ${{ github.workflow }} || ${{github.event.input.environment }}
-
+run-name: ${{ github.workflow }} || ${{github.event.inputs.environment }}
 on:
   workflow_dispatch:
     inputs:
